<resources>
    <string name="app_name">Binomial Tree Pricer</string>

    <string name="price_menu">Pricer</string>
    <string name="implied_vol_menu">Implied Volatility</string>

    <string name="price_activity_toolbar">Binomial Tree Pricer: Theoreticals</string>
    <string name="implied_vol_activity_toolbar">Binomial Tree Pricer: Implied Volatility</string>

    <string name="spot_label">Spot Price:</string>
    <string name="spot_hint">Underlying security value</string>
    <string name="spot_default">100</string>

    <string name="strike_label">Strike Price:</string>
    <string name="strike_hint">Option strike price</string>
    <string name="strike_default">100</string>

    <string name="risk_free_rate_label">Risk-Free Interest Rate (%):</string>
    <string name="risk_free_rate_hint">Risk-free Rate</string>
    <string name="risk_free_rate_default">-0.1</string>

    <string name="carry_rate_label">Carry Rate (%):</string>
    <string name="carry_rate_hint">Carry Rate</string>
    <string name="carry_rate_default">-0.1</string>

    <string name="volatility_label">Volatility (%):</string>
    <string name="volatility_hint">Volatility</string>
    <string name="volatility_default">30</string>

    <string name="expiry_label">Year Fraction:</string>
    <string name="expiry_hint">Years to expiry</string>
    <string name="expiry_default">1</string>

    <string name="model_type_label">Model Type:</string>
    <string name="model_type_hint">Binomial Tree Type</string>
    <string-array name="models_array">
        <item>Cox-Rubinstein-Ross</item>
        <item>Jarrow-Rudd Neutral</item>
        <item>Tian</item>
        <item>Leisen-Reimer</item>
        <item>Joshi</item>
    </string-array>
    <string-array name="models_array_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="optimizer_label">Optimizer:</string>
    <string name="optimizer_hint">Implied Volatility Root Finder</string>
    <string-array name="optimizer_array">
        <item>Bisection</item>
        <item>Brent</item>
        <item>Toms 348</item>
    </string-array>
    <string-array name="optimizers_array_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="option_price_label">Option Price:</string>
    <string name="option_price_hint">Option Price</string>
    <string name="option_price_default">12</string>

    <string name="option_type_label">Option Type:</string>
    <string name="option_type_call">Call</string>
    <string name="option_type_put">Put</string>

    <string name="tolerance_label">Absolute Tolerance:</string>
    <string name="tolerance_hint">Absolute Tolerance</string>
    <string name="tolerance_default">0.00000001</string>

    <string name="output_default">000.0000</string>

    <string name="call_price_label">Call Price:</string>
    <string name="call_price_hint">Call Price</string>

    <string name="call_delta_label">Call Delta:</string>
    <string name="call_delta_hint">Call Delta</string>

    <string name="call_gamma_label">Call Gamma:</string>
    <string name="call_gamma_hint">Call Gamma</string>

    <string name="call_vega_label">Call Vega:</string>
    <string name="call_vega_hint">Call Vega</string>

    <string name="put_price_label">Put Price:</string>
    <string name="put_price_hint">Put Price</string>

    <string name="put_delta_label">Put Delta:</string>
    <string name="put_delta_hint">Put Delta</string>

    <string name="put_gamma_label">Put Gamma:</string>
    <string name="put_gamma_hint">Put Gamma</string>

    <string name="put_vega_label">Put Vega:</string>
    <string name="put_vega_hint">Put Vega</string>

    <string name="implied_volatility_label">Implied Volatility (%):</string>
    <string name="implied_volatility_hint">Implied Volatility</string>

    <string name="implied_volatility_iterations_label">Iterations:</string>
    <string name="implied_volatility_iterations_hint">Iterations</string>

    <string name="american_options_label">American Exercise</string>
    <string name="european_options_label">European Exercise</string>

    <string name="run_label">Run</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="action_help">Help</string>
    <string name="title_activity_help">Help</string>

    <string name="smoothing_label">Smoothing</string>
    <string name="smoothing_description">
        If enabled, last step of binomial tree will be converted to a Black-Scholes step
    </string>

    <string name="acceleration_label">Acceleration</string>
    <string name="acceleration_description">
        If enabled, non-exercisable options will be calculated with Black-Scholes
    </string>

    <string name="nodes_label">Nodes</string>
    <string name="nodes_default">120</string>

    <string name="iv_low_label">Implied Volatility Minimum (%)</string>
    <string name="iv_low_default">1</string>

    <string name="iv_high_label">Implied Volatility Maximum (%)</string>
    <string name="iv_high_default">200</string>

    <string name="iv_iterations_label">Implied Volatility Maximum Iterations</string>
    <string name="iv_iterations_default">200</string>

    <string name="iv_tolerance_label">Implied Volatility Absolute Tolerance</string>
    <string name="iv_tolerance_default">0.00000001</string>

    <string name="nodes_preference_key">nodes_text</string>
    <string name="acceleration_preference_key">acceleration</string>
    <string name="smoothing_preference_key">smoothing</string>
    <string name="models_preference_key">models_list</string>
    <string name="optimizer_preference_key">optimizers_list</string>
    <string name="iv_low_preference_key">iv_low_text</string>
    <string name="iv_high_preference_key">iv_high_text</string>
    <string name="iv_iterations_preference_key">iv_iterations_text</string>
    <string name="iv_tolerance_preference_key">iv_tolerance_text</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="help_content_id">help_content_id</string>
    <string name="help_content">
        <![CDATA[
            <p>
                This app provides a basic Binomial Tree pricer for pricing American options.
                The analytics calculated are Price, Delta, Gamma and Vega for both Call and Put.
                The "Run" button launches the calculation, and depending on what tab is selected
                it will fill the correspondent output table.
            </p>

             <p>
                The reference implementation is the Generalized Black-Scholes model, which introduces
                the <i>cost of carry</i>. If there is no cost of carry, the carry rate input must
                equal the risk-free interest rate.
            </p>

             <p>
                The technique for pricing American options with a discrete lattice is by means of
                the backward induction. The time from valuation date to expiry is discretized
                using N steps, and the space discretization uses N steps with values that depend
                on the tree type.
            </p>

            <p>
                In general, the space discretization is a logarithmic discretization
                of the underlying space, so an "up" and "down" factors are requested for building the
                tree leaves for each and every time step. Similarly, an up and down probability is
                associated with the two factors. The choice of these 4 variables characterizes the
                tree and defines the accuracy. Usually one chooses this 4 unknowns to match as many
                moments of the underlying distribution as possible, and to have risk-neutral
                probabilities.
            </p>

            <p>
                There are two improvements to the usual binomial lattice pricing:
                <ul>
                    <li>Smoothing</li>
                    <li>Acceleration</li>
                </ul>
            </p>

            <p>
                When the smoothing is enabled, the second last step of the backward induction is
                a Black-Scholes step. This is because in the time discretization the option cannot
                be exercised from maturity to the second last time grid value. This reduces the
                model artifacts, and smoothens out the convergence when the number of nodes increases.
            </p>

            <p>
                When the acceleration is enabled, one of the two option type (call or put) is calculated
                with the Black-Scholes model. This is because, depending on the values of risk-free
                and carry rate, only one of them can be early exercised.
            </p>

            <p>
                The trees implemented are the:
                <ul>
                    <li>Cox-Rubinstein-Ross</li>
                    <li>Neutralized Jarrow-Rudd</li>
                    <li>Tian</li>
                    <li>Leisen-Reimer</li>
                    <li>Joshi</li>
                </ul>
                All these trees have been extensively studied in
                <a href=http://fbe.unimelb.edu.au/__data/assets/pdf_file/0010/2591884/170.pdf>this</a> paper.
            </p>

            <p>
                For an online Generalized Black-Scholes calculator that shows formulae and plots
                please visit my website <a href=http:option-pricer.ml>option-pricer.ml</a>.
            </p>

            <p>
                This app is open-source. You can check the Github repo
                <a href=https://github.com/pmontalb/MobileBinomialTreePricer>here</a>. If you want
                to check my other open source projects, below you find links to my Github and LinkedIn
                pages.
            </p>
          ]]>

    </string>

    <string name="fa_github_square">&#xf092;</string>
    <string name="fa_linkedin_square">&#xf08c;</string>
    <string name="github_url">https://github.com/pmontalb/</string>
    <string name="linkedIn_url">https://www.linkedin.com/in/francesco-paolo-montalbano/</string>

</resources>
