<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="smoothing"
        android:summary="@string/smoothing_description"
        android:title="@string/smoothing_label" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="acceleration"
        android:summary="@string/acceleration_description"
        android:title="@string/acceleration_label" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/nodes_default"
        android:inputType="number"
        android:key="nodes_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/nodes_label" />

</PreferenceScreen>
