<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:id="@+id/input_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="42dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_pirates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/option_type_call" />

                    <RadioButton
                        android:id="@+id/radio_ninjas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option_type_put" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/volatilityTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option_price_label"
                        android:textAppearance="@style/TextAppearance.AppCompat" />

                    <EditText
                        android:id="@+id/volatilityEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:ems="3"
                        android:hint="@string/option_price_hint"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        android:text="@string/option_price_default"
                        android:textAlignment="textEnd" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/spotTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spot_label"
                        android:textAppearance="@style/TextAppearance.AppCompat" />

                    <EditText
                        android:id="@+id/spotEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:ems="3"
                        android:hint="@string/spot_hint"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="false"
                        android:text="@string/spot_default"
                        android:textAlignment="textEnd" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/strikeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/strike_label"
                        android:textAppearance="@style/TextAppearance.AppCompat" />

                    <EditText
                        android:id="@+id/strikeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:ems="3"
                        android:hint="@string/strike_hint"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        android:text="@string/strike_default"
                        android:textAlignment="textEnd" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/riskFreeRateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/risk_free_rate_label"
                        android:textAppearance="@style/TextAppearance.AppCompat" />

                    <EditText
                        android:id="@+id/riskFreeRateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:ems="3"
                        android:hint="@string/risk_free_rate_hint"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        android:text="@string/risk_free_rate_default"
                        android:textAlignment="textEnd" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/carryRateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/carry_rate_label"
                        android:textAppearance="@style/TextAppearance.AppCompat" />

                    <EditText
                        android:id="@+id/carryRateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:ems="3"
                        android:hint="@string/carry_rate_hint"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        android:text="@string/carry_rate_default"
                        android:textAlignment="textEnd" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/expiryTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expiry_label"
                        android:textAppearance="@style/TextAppearance.AppCompat" />

                    <EditText
                        android:id="@+id/expiryEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:ems="3"
                        android:hint="@string/expiry_hint"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        android:text="@string/expiry_default"
                        android:textAlignment="textEnd" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/toleranceTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tolerance_label"
                        android:textAppearance="@style/TextAppearance.AppCompat" />

                    <EditText
                        android:id="@+id/toleranceEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:ems="3"
                        android:hint="@string/tolerance_hint"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        android:text="@string/tolerance_default"
                        android:textAlignment="textEnd" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/modelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/model_type_label"
                        android:textAppearance="@style/TextAppearance.AppCompat" />

                    <Spinner
                        android:id="@+id/modelSpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />


                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <TableLayout
        android:id="@+id/output_iv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_iv">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/impliedVolatilityLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:text="@string/implied_volatility_label"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/impliedVolatilityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:text="@string/output_default"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nIterationsLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:text="@string/implied_volatility_iterations_label"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nIterationsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:text="@string/output_default"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>
